# ai_full_stack

./: .gitignore  pyproject.toml  readme.md
app/: config.py  main.py
app/connections/: connection.py
app/routers/: ai.py
app/utils/: llm.py
back_end/: pyproject.toml
back_end/app/: config.py  main.py
back_end/app/agents/: rag.py
back_end/app/connections/: connection.py
back_end/app/routers/: ai.py
back_end/app/utils/: chroma.py  graph.py  llm.py  loader.py
front_end/: package.json
front_end/src/app/: page.js
