[project]
name = "pbp-ai"
version = "0.1.0"
description = "PBP AI Repo"
authors = [
    {name = "Anurag Pradhan ",email = "anuragp936@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.8,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
