[project]
name = "backend"
version = "0.1.0"
description = "PBP AI Repo"
authors = [
    {name = "Anurag Pradhan ",email = "anuragp936@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
package-mode = false
dependencies = [
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "ollama (>=0.4.7,<0.5.0)",
    "chromadb (>=0.6.3,<0.7.0)",
    "pdfplumber (>=0.11.5,<0.12.0)",
    "langchain (>=0.3.18,<0.4.0)",
    "langchain-core (>=0.3.34,<0.4.0)",
    "langchain-ollama (>=0.2.3,<0.3.0)",
    "langchain-community (>=0.3.17,<0.4.0)",
    "langchain-text-splitters (>=0.3.6,<0.4.0)",
    "unstructured[all-docs] (==0.5.6)",
    "fastembed (>=0.5.1,<0.6.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "elevenlabs (>=1.50.7,<2.0.0)",
    "langgraph (>=0.2.71,<0.3.0)",
    "ipython (>=8.32.0,<9.0.0)",
    "tavily-python (>=0.5.1,<0.6.0)",
    "rich (>=13.9.4,<14.0.0)",
    "langchain-openai (>=0.3.5,<0.4.0)",
    "pymupdf (>=1.25.3,<2.0.0)",
    "postgres (>=4.0,<5.0)",
    "psycopg (>=3.2.4,<4.0.0)",
    "3 (>=0.0.0,<0.0.1)",
    "langgraph-checkpoint-postgres (>=2.0.15,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
